MealType and MenuCategory Integration tests updated (where marked as TODO)